Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/notebooks/basic_mlflow_client.ipynb
+++ b/notebooks/basic_mlflow_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ba3c085-eb7f-47ff-8d75-23b033069f43",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c0e4d09f-86a9-4224-91c4-79daef5cfe4c",
    "metadata": {},
    "outputs": [],
@@ -48,10 +48,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "164ac873-e488-4d17-a4c3-cab21212e406",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RegisteredModel: aliases={}, creation_timestamp=1758501006243, description='', last_updated_timestamp=1758822566724, latest_versions=[<ModelVersion: aliases=[], creation_timestamp=1758822566724, current_stage='None', description='XGB basic demo — acc=0.9580', last_updated_timestamp=1758822566724, name='xgb-demo-wadkars-demo-v1', run_id='0a1e50c468cd454abec3c67a524be5aa', run_link='', source='mlflow-artifacts:/mlflow/0a1e50c468cd454abec3c67a524be5aa/artifacts/model', status='READY', status_message='', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651,68b8a07b2ad64d0492eb2c97-68b8a07b2ad64d0492eb2c96',\n",
+       " 'mlflow.domino.environment_id': '68b0bb70dc77613e66e6368d',\n",
+       " 'mlflow.domino.environment_revision_id': '68ceaf1ac4ae886f22d8150d',\n",
+       " 'mlflow.domino.hardware_tier': 'medium-k8s',\n",
+       " 'mlflow.domino.project_id': '68b08bbfdc77613e66e6364e',\n",
+       " 'mlflow.domino.project_name': 'ddl-end-to-end-demo',\n",
+       " 'mlflow.domino.provenance_checkpoint_id': '68d55c79a1abe31e575461b2',\n",
+       " 'mlflow.domino.run_id': '68d5457101003e5e51a3c2da',\n",
+       " 'mlflow.domino.run_number': '80',\n",
+       " 'mlflow.domino.user': 'wadkars',\n",
+       " 'mlflow.domino.user_id': '68ac9b59ea374e2b81c48d75',\n",
+       " 'mlflow.source.git.branch': 'main',\n",
+       " 'mlflow.source.git.commit': 'cc2353daa08dbff7399b30500f61f36887938907',\n",
+       " 'mlflow.source.type': 'NOTEBOOK',\n",
+       " 'mlflow.user': 'wadkars'}, user_id='', version='4'>], name='xgb-demo-wadkars-demo-v1', tags={'mlflow.domino.dataset_info': '68b08bc1dc77613e66e63652-68b08bc1dc77613e66e63651,68b8a07b2ad64d0492eb2c97-68b8a07b2ad64d0492eb2c96',\n",
+       " 'mlflow.domino.environment_id': '68b0bb70dc77613e66e6368d',\n",
+       " 'mlflow.domino.environment_revision_id': '68ceaf1ac4ae886f22d8150d',\n",
+       " 'mlflow.domino.hardware_tier': 'medium-k8s',\n",
+       " 'mlflow.domino.project_id': '68b08bbfdc77613e66e6364e',\n",
+       " 'mlflow.domino.project_name': 'ddl-end-to-end-demo',\n",
+       " 'mlflow.domino.provenance_checkpoint_id': '68d0987019b70f6cdbd1b7ca',\n",
+       " 'mlflow.domino.run_id': '68d09631e5768d3a1f9f85db',\n",
+       " 'mlflow.domino.run_number': '61',\n",
+       " 'mlflow.domino.user': 'wadkars',\n",
+       " 'mlflow.domino.user_id': '68ac9b59ea374e2b81c48d75',\n",
+       " 'mlflow.source.git.branch': 'main',\n",
+       " 'mlflow.source.git.commit': '08edfe0f8453e980639053081839e82529665c96',\n",
+       " 'mlflow.source.type': 'NOTEBOOK',\n",
+       " 'mlflow.user': 'wadkars'}>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_name = os.environ['DOMINO_STARTING_USERNAME']\n",
     "exp_model_name = f\"xgb-demo-{my_name}-demo-v1\"\n",
@@ -62,10 +101,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "952a6292-8d54-4bee-8534-359a3d9b3dc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/xgboost/core.py:158: UserWarning: [21:21:18] WARNING: /workspace/src/c_api/c_api.cc:1374: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "2025/10/01 21:21:21 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/10/01 21:21:22 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: xgb-demo-wadkars-demo-v1, version 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run ID:        8593775332884c1e8b93a09f635c5a82\n",
+      "Model URI:     runs:/8593775332884c1e8b93a09f635c5a82/model\n",
+      "Registered:    xgb-demo-wadkars-demo-v1 v5 (status=READY)\n",
+      "🏃 View run xgb-basic at: http://127.0.0.1:8765/#/experiments/269/runs/8593775332884c1e8b93a09f635c5a82\n",
+      "🧪 View experiment at: http://127.0.0.1:8765/#/experiments/269\n"
+     ]
+    }
+   ],
    "source": [
     "    # Optional: point to your MLflow server\n",
     "    # mlflow.set_tracking_uri(\"http://localhost:5000\")\n",
@@ -129,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4d5ab2c9-8798-4929-b7eb-435313462f22",
    "metadata": {},
    "outputs": [],
@@ -199,10 +260,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1448228f-c199-41fe-bc0c-72583228e692",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/mlflow/store/artifact/utils/models.py:31: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest = client.get_latest_versions(name, None if stage is None else [stage])\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "95d28625b26a421bab1ab55da5fff218",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyFunc preds: [1]\n"
+     ]
+    }
+   ],
    "source": [
     "pyfunc_model = load_xgb_pyfunc_version(exp_model_name, \"latest\")\n",
     "sample = np.random.rand(1, 30)  # shape must match your training columns\n",
