--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a093c1ef-1f20-4e1b-84de-891d32ff48f0",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
    "outputs": [],
@@ -196,10 +196,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "83111d82-fcdd-4b35-a491-f714007b3527",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'UserId': 'AROA5YW464O6S35MGC2WL:botocore-session-1759353166', 'Account': '946429944765', 'Arn': 'arn:aws:sts::946429944765:assumed-role/sameer-irsa-full-bucket-role/botocore-session-1759353166', 'ResponseMetadata': {'RequestId': '250552df-303a-4391-9d28-cb904973b765', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '250552df-303a-4391-9d28-cb904973b765', 'x-amz-sts-extended-request-id': 'MTp1cy13ZXN0LTI6MTc1OTM1MzE2Njk1NzpSOkRsZ1AxQkdh', 'content-type': 'text/xml', 'content-length': '489', 'date': 'Wed, 01 Oct 2025 21:12:46 GMT'}, 'RetryAttempts': 0}}\n"
+     ]
+    }
+   ],
    "source": [
     "## Verify your role identity in AWS\n",
     "import boto3\n",
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "46eb3e5a-835a-4942-9fbb-2bc685605ed8",
    "metadata": {},
    "outputs": [],
@@ -236,10 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d8af9bda-73fe-4dde-b2b5-c9c6e54ee9e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upload: ../../../tmp/train.parquet to s3://ddl-wadkars/end-to-end/california/train/train.parquet\n",
+      "upload: ../../../tmp/val.parquet to s3://ddl-wadkars/end-to-end/california/val/val.parquet\n",
+      "upload: ../../../tmp/test.parquet to s3://ddl-wadkars/end-to-end/california/test/test.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "# Download dataset and push to S3\n",
     "# Push to S3\n",
@@ -266,21 +284,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "030ee63e-3378-4777-ad4b-0a0192a448d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "ROOT_DOMINO_DATASET_FOLDER = \"/mnt/data\" #For DFS based project use /domino/datasets/local/\n",
-    "DATASET_NAME=\"ddl-end-to-end-demo"
+    "DATASET_NAME=\"ddl-end-to-end-demo\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d1897eb5-a71b-41b1-b8d9-2e85a0709eea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied /tmp/train.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/train\n",
+      "Copied /tmp/val.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/val\n",
+      "Copied /tmp/test.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/test\n"
+     ]
+    }
+   ],
    "source": [
     "def copy_file_with_dirs(src_file, dest_file):\n",
     "    \"\"\"\n",
@@ -311,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1adda697-3841-450e-98f4-bed31db79159",
    "metadata": {},
    "outputs": [],
@@ -579,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2522d26e-854b-43f2-b874-ecd7be87d9c9",
    "metadata": {},
    "outputs": [],
@@ -589,10 +617,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5ac0c61b-69d8-4686-858b-67ad14a2d924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_34298/1217648743.py:6: UserWarning: \n",
+      "The version_base parameter is not specified.\n",
+      "Please specify a compatability version level, or None.\n",
+      "Will assume defaults for version 1.1\n",
+      "  with initialize(config_path=\"../conf\"):\n"
+     ]
+    }
+   ],
    "source": [
     "## Read Conf from Hydra\n",
     "from hydra import compose, initialize\n",
@@ -626,7 +666,38 @@
    "execution_count": null,
    "id": "224ba8ff-d2f0-4ad2-83b8-501b4dc41640",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-01 21:14:42,168\tINFO client_builder.py:244 -- Passing the following kwargs to ray.init() on the server: ignore_reinit_error, log_to_driver\n",
+      "SIGTERM handler is not set because current thread is not the main thread.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Worker env peek: {'ROLE': True, 'TOKEN_FILE': '/var/run/secrets/eks.amazonaws.com/serviceaccount/token', 'REGION': 'us-west-2'}\n",
+      "Parent run id: b7ee5d5275cf48bfa546a9120bad68ac\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d084da7046e3453694c3e22bd0d5b602",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Parquet Files Sample 0:   0%|          | 0.00/1.00 [00:00<?, ? file/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "## All AWS Env variables are redundant when using locally\n",
     "\n",
@@ -707,6 +778,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "65fd9c4b-94c5-44b8-9a58-51cbfbc16361",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c5626f7-85b6-4ae7-89bb-67467c463464",
    "metadata": {},
    "outputs": [],
    "source": []
