Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,14 @@
     "import sys\n",
     "sys.path.append(\"/mnt/code\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b02ec72-8d9f-4419-9afc-bf4c261e512d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a093c1ef-1f20-4e1b-84de-891d32ff48f0",
    "metadata": {},
    "outputs": [],
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
    "outputs": [],
@@ -196,18 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "83111d82-fcdd-4b35-a491-f714007b3527",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'UserId': 'AROA5YW464O6S35MGC2WL:botocore-session-1759353166', 'Account': '946429944765', 'Arn': 'arn:aws:sts::946429944765:assumed-role/sameer-irsa-full-bucket-role/botocore-session-1759353166', 'ResponseMetadata': {'RequestId': '250552df-303a-4391-9d28-cb904973b765', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '250552df-303a-4391-9d28-cb904973b765', 'x-amz-sts-extended-request-id': 'MTp1cy13ZXN0LTI6MTc1OTM1MzE2Njk1NzpSOkRsZ1AxQkdh', 'content-type': 'text/xml', 'content-length': '489', 'date': 'Wed, 01 Oct 2025 21:12:46 GMT'}, 'RetryAttempts': 0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Verify your role identity in AWS\n",
     "import boto3\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "46eb3e5a-835a-4942-9fbb-2bc685605ed8",
    "metadata": {},
    "outputs": [],
@@ -244,20 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d8af9bda-73fe-4dde-b2b5-c9c6e54ee9e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "upload: ../../../tmp/train.parquet to s3://ddl-wadkars/end-to-end/california/train/train.parquet\n",
-      "upload: ../../../tmp/val.parquet to s3://ddl-wadkars/end-to-end/california/val/val.parquet\n",
-      "upload: ../../../tmp/test.parquet to s3://ddl-wadkars/end-to-end/california/test/test.parquet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download dataset and push to S3\n",
     "# Push to S3\n",
@@ -284,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "030ee63e-3378-4777-ad4b-0a0192a448d6",
    "metadata": {},
    "outputs": [],
@@ -295,20 +285,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d1897eb5-a71b-41b1-b8d9-2e85a0709eea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copied /tmp/train.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/train\n",
-      "Copied /tmp/val.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/val\n",
-      "Copied /tmp/test.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def copy_file_with_dirs(src_file, dest_file):\n",
     "    \"\"\"\n",
@@ -339,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1adda697-3841-450e-98f4-bed31db79159",
    "metadata": {},
    "outputs": [],
@@ -384,7 +364,7 @@
     "      - num_boost_round / early_stopping_rounds control trial length.\n",
     "      - nthread = cpus_per_worker to avoid oversubscription.\n",
     "    \"\"\"\n",
-    "\n",
+    "    mlflow.xgboost.autolog() \n",
     "    exp_id = mlflow_utils.ensure_mlflow_experiment(experiment_name)\n",
     "    mv = mlflow_utils.ensure_registered_model(model_name)\n",
     "    # Storage: local for dev, S3/your env otherwise\n",
@@ -463,8 +443,8 @@
     "    if DEV_FAST:\n",
     "        param_space[\"num_boost_round\"] = 20\n",
     "        param_space[\"early_stopping_rounds\"] = 5\n",
-    "        num_workers = 1\n",
-    "        cpus_per_worker = 1\n",
+    "        #num_workers = 1\n",
+    "        #cpus_per_worker = 1\n",
     "        NUM_SAMPLES = 5\n",
     "        MAX_CONCURRENT = 3\n",
     "        SAVE_ARTIFACTS = True\n",
@@ -607,32 +587,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2522d26e-854b-43f2-b874-ecd7be87d9c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "which_env=\"local\" #Picks the appropriate hydra config file"
+    "which_env=\"dev\" #Picks the appropriate hydra config file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5ac0c61b-69d8-4686-858b-67ad14a2d924",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_34298/1217648743.py:6: UserWarning: \n",
-      "The version_base parameter is not specified.\n",
-      "Please specify a compatability version level, or None.\n",
-      "Will assume defaults for version 1.1\n",
-      "  with initialize(config_path=\"../conf\"):\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Read Conf from Hydra\n",
     "from hydra import compose, initialize\n",
@@ -666,38 +634,7 @@
    "execution_count": null,
    "id": "224ba8ff-d2f0-4ad2-83b8-501b4dc41640",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-10-01 21:14:42,168\tINFO client_builder.py:244 -- Passing the following kwargs to ray.init() on the server: ignore_reinit_error, log_to_driver\n",
-      "SIGTERM handler is not set because current thread is not the main thread.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Worker env peek: {'ROLE': True, 'TOKEN_FILE': '/var/run/secrets/eks.amazonaws.com/serviceaccount/token', 'REGION': 'us-west-2'}\n",
-      "Parent run id: b7ee5d5275cf48bfa546a9120bad68ac\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d084da7046e3453694c3e22bd0d5b602",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parquet Files Sample 0:   0%|          | 0.00/1.00 [00:00<?, ? file/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## All AWS Env variables are redundant when using locally\n",
     "\n",
@@ -713,7 +650,7 @@
     "}\n",
     "ray.shutdown()\n",
     "ray_utils.ensure_ray_connected(RAY_JOB_ENV,ray_ns=app_name)\n",
-    "\n",
+    "mlflow.xgboost.autolog() \n",
     "main(experiment_name=experiment_name,data_dir=data_dir, \n",
     "     model_name=model_name,model_desc=model_desc,\n",
     "     num_workers=ray_workers, cpus_per_worker=cpus_per_worker,DEV_FAST=dev_fast)"
